[package]
name = "simple-http"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
http = "0.2.9"
serde = { verison = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
ws = "0.9.2"
