[package]
name = "simple-http"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
http = "0.2.9"
httparse = "1.8.0"
hyper = "0.14.26"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
typescript-type-def = "0.5.6"
typescript-type-def-derive = "0.5.6"
ws = "0.9.2"
